Refine order & payment flow, update JWT and security config
- Add CreateOrderRequest and CreatePaymentRequest DTOs
- Update CartController, OrderController and PaymentController flows
- Improve Order entity and cart item repository logic
- Refactor CartService, OrderService and PaymentService
- Update JwtAuthenticationFilter, JwtUtil and SecurityConfig
- Adjust AuthController for updated authentication flow