@@ -1,20 +1,19 @@
 package com.example.login_backend.service;
 
+import com.example.login_backend.dto.CreateOrderRequest;
 import com.example.login_backend.dto.OrderDto;
 import com.example.login_backend.dto.OrderItemDto;
-import com.example.login_backend.dto.CreateOrderResponse;
-import com.example.login_backend.entity.*;
-import com.example.login_backend.repository.*;
-import com.stripe.model.PaymentIntent;
+import com.example.login_backend.entity.Order;
+import com.example.login_backend.entity.OrderItem;
+import com.example.login_backend.entity.OrderStatus;
+import com.example.login_backend.repository.OrderItemRepository;
+import com.example.login_backend.repository.OrderRepository;
 import com.stripe.Stripe;
-import com.stripe.exception.StripeException;
-import com.stripe.net.ApiResource;
-import com.stripe.net.RequestOptions;
+import com.stripe.model.PaymentIntent;
 import com.stripe.param.PaymentIntentCreateParams;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
@@ -25,51 +24,63 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class OrderService {
 
+    private final JewelryItemService jewelryService;
     private final OrderRepository orderRepository;
     private final OrderItemRepository orderItemRepository;
-    private final JewelryItemService jewelryService;
-    private final CartRepository cartRepository;
-    private final CartItemRepository cartItemRepository;
 
     @Value("${stripe.secret.key}")
     private String stripeSecretKey;
 
-    public OrderDto createOrder(Long userId, Long addressId, List<OrderItemDto> itemDtos) {
-        BigDecimal total = itemDtos.stream()
-                .map(i -> i.getPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
+    // -------------------------------------------------------------
+    // 2) ÖDEME BAŞARILI → SİPARİŞ KAYDI OLUŞTUR
+    // -------------------------------------------------------------
+    public OrderDto createOrder(Long userId, Long addressId, List<OrderItemDto> items) {
 
         Order order = Order.builder()
                 .userId(userId)
                 .addressId(addressId)
-                .totalPrice(total)
+                .totalPrice(calculateTotal(items))
                 .status(OrderStatus.PENDING)
                 .build();
 
-        Order savedOrder = orderRepository.save(order);
+        Order saved = orderRepository.save(order);
 
-        List<OrderItem> items = itemDtos.stream()
-                .map(dto -> OrderItem.builder()
-                        .order(savedOrder)
-                        .jewelryId(dto.getJewelryId())
-                        .quantity(dto.getQuantity())
-                        .price(dto.getPrice())
+        List<OrderItem> orderItems = items.stream()
+                .map(i -> OrderItem.builder()
+                        .order(saved)
+                        .jewelryId(i.getJewelryId())
+                        .quantity(i.getQuantity())
+                        .price(i.getPrice())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
-        orderItemRepository.saveAll(items);
+        orderItemRepository.saveAll(orderItems);
+        saved.setItems(orderItems);
 
-        savedOrder.setItems(items);
-
-        return mapToDto(savedOrder);
+        return mapToDto(saved);
     }
 
+    // -------------------------------------------------------------
+    // Kullanıcının siparişleri
+    // -------------------------------------------------------------
     public List<OrderDto> getOrdersByUser(Long userId) {
         return orderRepository.findByUserId(userId).stream()
                 .map(this::mapToDto)
                 .collect(Collectors.toList());
     }
 
+    // -------------------------------------------------------------
+    // Total hesaplama
+    // -------------------------------------------------------------
+    private BigDecimal calculateTotal(List<OrderItemDto> items) {
+        return items.stream()
+                .map(i -> i.getPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+    }
+
+    // -------------------------------------------------------------
+    // DTO Mapper
+    // -------------------------------------------------------------
     private OrderDto mapToDto(Order order) {
         List<OrderItemDto> items = order.getItems() != null
                 ? order.getItems().stream()
@@ -91,96 +102,5 @@ public class OrderService {
                 .createdAt(order.getCreatedAt())
                 .items(items)
                 .build();
-    }
-
-    @Transactional
-    public CreateOrderResponse checkout(Long userId, Long addressId) throws StripeException {
-
-        // Kullanıcının sepetini al
-        Cart cart = cartRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Sepet bulunamadı"));
-
-        List<CartItem> cartItems = cartItemRepository.findByCartId(cart.getId());
-
-        if (cartItems.isEmpty()) {
-            throw new RuntimeException("Sepet boş, sipariş oluşturulamaz");
-        }
-
-        // OrderItemDto listesine dönüştür
-        List<OrderItemDto> itemDtos = cartItems.stream()
-                .map(ci -> {
-
-                    // Sipariş öncesi stok azalt
-                    jewelryService.reduceStock(ci.getJewelryId(), ci.getQuantity());
-
-                    return OrderItemDto.builder()
-                            .jewelryId(ci.getJewelryId())
-                            .quantity(ci.getQuantity())
-                            .price(jewelryService.getPrice(ci.getJewelryId()))
-                            .build();
-                })
-                .toList();
-
-        // Order oluştur
-        Order order = createOrderEntity(userId, addressId, itemDtos); // bunu aşağıya ekleyeceğiz
-
-        // Sepeti boşalt
-        cartItemRepository.deleteAll(cartItems);
-
-        // Stripe API key
-        Stripe.apiKey = stripeSecretKey;
-
-        // Toplam fiyat kuruşa çevir
-        long amount = order.getTotalPrice().multiply(BigDecimal.valueOf(100)).longValue();
-
-        // PaymentIntent oluştur
-        PaymentIntentCreateParams params = PaymentIntentCreateParams.builder()
-                .setAmount(amount)
-                .setCurrency("usd")
-                .putMetadata("orderId", order.getId().toString())
-                .build();
-
-        PaymentIntent intent = PaymentIntent.create(params);
-
-        // PaymentIntent ID siparişe kaydet
-        order.setPaymentIntentId(intent.getId());
-        orderRepository.save(order);
-
-        // Frontend'e clientSecret gönder
-        return CreateOrderResponse.builder()
-                .orderId(order.getId())
-                .clientSecret(intent.getClientSecret())
-                .build();
-    }
-
-    private Order createOrderEntity(Long userId, Long addressId, List<OrderItemDto> itemDtos) {
-
-        BigDecimal total = itemDtos.stream()
-                .map(i -> i.getPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        Order order = Order.builder()
-                .userId(userId)
-                .addressId(addressId)
-                .totalPrice(total)
-                .status(OrderStatus.PENDING)
-                .build();
-
-        Order savedOrder = orderRepository.save(order);
-
-        List<OrderItem> items = itemDtos.stream()
-                .map(dto -> OrderItem.builder()
-                        .order(savedOrder)
-                        .jewelryId(dto.getJewelryId())
-                        .quantity(dto.getQuantity())
-                        .price(dto.getPrice())
-                        .build())
-                .collect(Collectors.toList());
-
-        orderItemRepository.saveAll(items);
-
-        savedOrder.setItems(items);
-
-        return savedOrder;
     }
 }
